It is working now ...
git-svn-id: svn://localhost/home/matthias/source/svn/matthias_wimmer@116 4ea7d500-c7de-0310-95d6-fef3d14ee6ae

--- a/configure.ac
+++ b/configure.ac
@@ -83,5 +83,8 @@ if test "$libpopt" != "yes"; then
     AC_MSG_ERROR([Couldn't find required libpopt installation])
 fi
 
+dnl define where the configuration file is located
+AC_DEFINE_DIR(CONFIG_DIR,sysconfdir,[where the configuration file can be found])
+
 dnl Create the makefiles
 AC_OUTPUT(Makefile intl/Makefile po/Makefile.in m4/Makefile )
