Small addition to configure.ac
git-svn-id: svn://localhost/home/matthias/source/svn/matthias_wimmer@211 4ea7d500-c7de-0310-95d6-fef3d14ee6ae

--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,7 @@ AC_PREREQ(2.50)
 AC_INIT(couriersrs.h)
 AM_INIT_AUTOMAKE(couriersrs,0.1.2)
 AM_CONFIG_HEADER(config.h)
+AC_CONFIG_MACRO_DIR([m4])
 AC_LANG(C++)
 AC_GNU_SOURCE
 
