Changes in configure script
git-svn-id: svn://localhost/home/matthias/source/svn/matthias_wimmer@212 4ea7d500-c7de-0310-95d6-fef3d14ee6ae

--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,7 @@ AM_CONFIG_HEADER(config.h)
 AC_CONFIG_MACRO_DIR([m4])
 AC_LANG(C++)
 AC_GNU_SOURCE
+AC_USE_SYSTEM_EXTENSIONS
 
 sinclude(ac-helpers/ac_define_dir.m4)
 
@@ -16,7 +17,7 @@ AC_PROG_MAKE_SET
 AM_ICONV
 
 AM_GNU_GETTEXT
-AM_GNU_GETTEXT_VERSION(0.14.1)
+AM_GNU_GETTEXT_VERSION(0.17)
 ALL_LINGUAS=""
 
 AC_DISABLE_STATIC
